--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
             <h1 align="center">
                 Catatan Pengeluaran Pribadi
             </h1>
+            
+            <div id="liffprofile">
+                nama
+                
+            </div>
             <ul class="nav nav-pills">
                 <li><a id="nav-list-catatan" href="javascript:void(0);" onclick="gantiMenu('list-catatan');">List
                         Pengeluaran</a></li>
