--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 Catatan Pengeluaran Pribadi
             </h1>
             
-            <div id="liffprofile">
+            <div onload="liffprofile()";>
                 nama
                 
             </div>
