--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </h1>
             
             <div onload="liffprofile()";>
-                nama
+                <h5 id="name"> </h5>
                 
             </div>
             <ul class="nav nav-pills">
