--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 Catatan Pengeluaran Pribadi
             </h1>
             
-            <div onload="liffprofile()";>
+            <div onload="liffprofile();">
                 <h5 id="name"> </h5>
                 
             </div>
