--- a/index.html
+++ b/index.html
@@ -22,14 +22,11 @@
 
     <div class="col-xs-12 col-md-8 col-md-offset-2" ng-controller="listContactCtrl">
         <div class="page-header">
+
             <h1 align="center">
                 Catatan Pengeluaran Pribadi
             </h1>
-            
-            <div onload="liffprofile();">
-                <h5 id="name"> </h5>
-                
-            </div>
+            <h6 id="liffgetprofile"> nama </h6>
             <ul class="nav nav-pills">
                 <li><a id="nav-list-catatan" href="javascript:void(0);" onclick="gantiMenu('list-catatan');">List
                         Pengeluaran</a></li>
@@ -138,6 +135,7 @@
                     <button id="openWindowButton" class="btn btn-success btn-small">Open External Window</button>
                     <button id="closeWindowButton" class="btn btn-danger btn-small">Close LIFF App</button>
                     <button id="sendMessageButton" class="btn btn-warning btn-small">Send Message</button>
+                    <button id="liffgetprofile" class="btn btn-warning btn-small">Send Message</button>
                 </div>
 
             </div>
